Small CSS tweak to correct wrapping in admin settings. Correcting color picker save behavior in Drupal 5.

--- a/css/fivestar-admin.css
+++ b/css/fivestar-admin.css
@@ -2,7 +2,7 @@
 div.fivestar-star-preview {
   border: none;
   width: 200px;
-  height: 32px;
+  height: 50px;
 }
 div.fivestar-widgets div.form-item {
   float: left; /* RTL */
